Fix brand bidding

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -327,7 +327,7 @@ en:
         <br/><br/>
         These terms are off limits on all ads platforms, as described in our Terms of Service - Section 19.
         <br/><br/>
-        We have temporarily suspended your account until you are in compliance.
+        Your account has been suspended due to this violation.
         <br/><br/>
         Thank you.
     suspend_publisher_for_brand_bidding_and_impersonation:
@@ -344,9 +344,7 @@ en:
         </ul>
         You can choose not to change your domain name, but you would have to change the download button to direct users to brave.com and not your Referral Code. You cannot earn through the Referral Program while impersonating Brave.
         <br/><br/>
-        Please carefully review our Terms of Service, as another violation will result in a ban from the Referral Program.
-        <br/><br/>
-        We have temporarily suspended your account until you are in compliance.
+        Your account has been suspended due to this violation.
         <br/><br/>
         Thank you.
     submit_appeal:
