--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -412,6 +412,10 @@ ja:
       heading: 移管を却下する
       reject: 却下
   publishers:
+    home_balances:
+      balance_pending: 保留中の支払い
+      next_deposit_date: "次の入金日："
+      payout_minimum_balance: "最低出金金額は %{amount} %{currency}です"
     shared:
       enter_email: メールアドレスを入力
       sign_up: 登録
@@ -545,10 +549,7 @@ ja:
       migration: 現在、定期メンテナンスを実施しています。 この間、Upholdウォレットに問題が発生する場合があります。 まもなく復旧する予定です。
       noscript: ダッシュボードを操作する場合は、ブラウザーでJavaScriptを有効にしてください。
       title: ダッシュボード
-      balance_pending: 保留中の支払い
-      next_deposit_date: "次の入金日："
       payout_in_progress: "進行中の支払い"
-      payout_minimum_balance: "最低出金金額は %{amount} %{currency}です"
       add_channel_cta: ウェブサイトまたはYouTubeチャンネルを追加して、Braveのファンがこれまでにどれだけ支援したかを確認してください。
       held_funds: 中断されたBATポイント支払い
       held_funds_description: これらの資金は、不審なアクティビティが確認されたため中断されている。こちらの<a href="/publishers/case/new">手順</a>にしたがって、異議申し立てを行ってください
