--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -583,6 +583,8 @@ en:
       disabled_payouts: Payouts will be coming soon. Keep an eye on this space to connect your wallet.
       migration: We are currently performing scheduled maintenance. During this time you may see some issues with your uphold wallet. We should be fully functional shortly.
       noscript: Please enable JavaScript in your browser if you wish to interact with the dashboard.
+      referral_program_winddown: |
+        The referral program has started winding down on Nov 9, 2020. Please read <b><a href=%{blog_link}>our blog post</a></b> for more details.
       title: Dashboard
       payout_in_progress: "Payout In Progress"
       add_channel_cta: Add a website or YouTube channel to see how much your fans on Brave have contributed so far.
