--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -555,7 +555,7 @@ ja:
       migration: 現在、定期メンテナンスを実施しています。 この間、Upholdウォレットに問題が発生する場合があります。 まもなく復旧する予定です。
       noscript: ダッシュボードを操作する場合は、ブラウザーでJavaScriptを有効にしてください。
       referral_program_winddown: |
-        リファラルプログラムは2020年11月9日より徐々に縮小していくことになりました。詳しくは<a href=%{blog_link}>ブログ記事</a>をご覧ください。
+        リファラルプログラムは2020年11月24日をもって終了となりました。詳細は<b><a href=%{blog_link}>ブログ記事</a></b>をご確認ください。
       title: ダッシュボード
       add_channel_cta: ウェブサイトまたはYouTubeチャンネルを追加して、Braveのファンがこれまでにどれだけ支援したかを確認してください。
 
