--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,7 +100,7 @@ en:
     shared:
       heading: Error
       body: Oops, sorry about that. You can try to refresh the page or return to
-      contact: "For assistance please contact us at: %{support_email}"
+      contact: "For assistance please contact us at http://community.brave.com"
   faqs:
     index:
       title: Frequently Asked Questions
