--- a/config/locales/views/browser_users/ja.yml
+++ b/config/locales/views/browser_users/ja.yml
@@ -2,6 +2,6 @@ ja:
   browser_users:
     pending_balance:
       balance_pending: 保留中の支払い
-      bat_in_locale: BATポイント
+      bat_in_locale: BAT
       next_deposit_date: "次の入金日："
       payout_in_progress: "進行中の支払い"
