Fix login emails having the wrong locale set by checking the last login activity.
Last login activity checks the Accept-Language, so the first
login emails should be correct.

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -342,6 +342,7 @@ ja:
       body_html: |
         下のボタンをクリックして、Brave Rewardsアカウントにログインできます。このメールには、一度しか使用できないプライベートログインが含まれています。
       button: Brave Rewardsにログイン
+      explicit_url: If the above button doesn't work, paste this link in your browser %{url}
     login_partner_email:
       salutation: こんにちわ%{name}さん、
       subject: Brave Rewardsのパートナーとして追加されました
