--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -426,6 +426,7 @@ en:
       open_case_description:
         <a href="/publishers/case">Your appeal case </a> has been opened. Check back regularly for any updates.
       payout_in_progress: "Payout In Progress"
+      payout_minimum_balance: "Minimum balance for payout is %{amount} USD"
       rejected_funds_description: |
         <a href="/publishers/case">Your appeal was rejected</a>. This decision is final.
     shared:
