--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,7 @@ en:
   bat_in_locale: BAT
   shared:
     add_channel: Add Channel
+    add_promo_code: Add Promo Code
     app_title: Brave Rewards | Creators
     app_description: Do you run a website or channels on YouTube or Twitch? If you’re interested in monetizing your content, verify your site and unlock your contributions!
     cancel: Cancel
