--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,7 @@ en:
   bat_in_locale: BAT
   shared:
     add_channel: Add Channel
+    add_promo_code: Add Promo Code
     app_title: Brave Rewards | Creators
     app_description: Do you run a website or channels on YouTube or Twitch? If you’re interested in monetizing your content, verify your site and unlock your contributions!
     cancel: Cancel
@@ -638,6 +639,8 @@ en:
       refresh_account_button: Check again.
       still_not_verified: Your Paypal account still isn't verified. Please try again when you link your bank account.
       view_account_summary: "Check Balance"
+    promo_registration:
+      remove: 'Remove promo code'
     channel:
       added: added %{date}
       remove_verified: Remove channel
