--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -511,6 +511,10 @@ en:
         no_payment: You will not be able to receive payment for this cycle.
         locked: At the time we generated the payout report your account was in locked status from removing your 2FA.
         generating: The payout report is currently generating. Please check back later.
+    ensure_email:
+      ensure_email: Authentication Attempt
+      ensure_email_html: |
+        Press <strong>Continue</strong> to login as <br/><strong>'%{login_email}'</strong>.  
     change_email:
       login_email: Login Email
       login_email_message: We need your valid email address for account access and recovery purposes.
