--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -227,6 +227,10 @@ en:
       salutation: Hi %{name},
       updated_email: New email
       channel_name: "%{channel} Referral Link"
+    wallet_refresh_failure:
+      subject: "Unable to connect to your %{wallet_provider} wallet"
+      body_html: "We were unable to connect to your %{wallet_provider} wallet and cannot process any pending rewards payouts you may have. If you wish to continue receiving Creator's rewards please login and reconnect your %{wallet_provider} wallet."
+      button: Login in to Reconnect
     channel_contested:
       subject: "A channel transfer for %{channel_name} has been requested"
       title: A request to transfer one of your channels has been made
